fixed overflow issues, added some basic compatibility for firefox

--- a/src/features/resume-creator/resumeCreator.css
+++ b/src/features/resume-creator/resumeCreator.css
@@ -1,11 +1,14 @@
 .container{
     display: flex;
     justify-content: space-between;
+    height: 100%;
 }
 
 .resume-control{
     flex: 1;
     padding: 48px;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
 
 .title{
